Created band model

--- a/views/index.html
+++ b/views/index.html
@@ -30,5 +30,7 @@
 
     <h1>Concert Tracker</h1>
 
+    <iframe src="https://archive.org/embed/gd79-09-04.sbd.clugston.9452.sbeok.shnf" width="500" height="140" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
+
   </body>
 </html>
