Defined models for band, concert, song, user, and user profile

--- a/views/bands.html
+++ b/views/bands.html
@@ -23,14 +23,14 @@
     <script type="text/javascript" src="js/app.js"></script>
 
     <!-- APPLICATION SCRIPTS -->
-    <script src="scripts/app.js"></script>
+    <script src="scripts/bands.js"></script>
   </head>
 
   <body>
 
-    <h1>Concert Tracker</h1>
+    <h1>Bands Index</h1>
 
-
+    <iframe src="https://archive.org/embed/gd79-09-04.sbd.clugston.9452.sbeok.shnf" width="500" height="140" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
 
   </body>
 </html>
