--- a/views/user_profiles.html
+++ b/views/user_profiles.html
@@ -23,12 +23,12 @@
     <script type="text/javascript" src="js/app.js"></script>
 
     <!-- APPLICATION SCRIPTS -->
-    <script src="scripts/app.js"></script>
+    <script src="scripts/user_profiles.js"></script>
   </head>
 
   <body>
 
-    <h1>Concert Tracker</h1>
+    <h1>User Profile Index</h1>
 
 
 
