--- a/views/bands.html
+++ b/views/bands.html
@@ -10,7 +10,7 @@
     <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
     <!-- custom styles -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 
     <!-- jquery -->
     <!-- Note: using subresource integrity; see: https://en.wikipedia.org/wiki/Subresource_Integrity -->
@@ -19,11 +19,9 @@
     <!-- handlebars -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
 
-    <!-- custom script -->
-    <script type="text/javascript" src="js/app.js"></script>
-
     <!-- APPLICATION SCRIPTS -->
-    <script src="scripts/bands.js"></script>
+    <script type="text/javascript" src="scripts/bands.js"></script>
+
   </head>
 
   <body>
@@ -65,7 +63,137 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-    <h1>Bands Index</h1>
+    <h1 id="bands-header">Bands</h1>
+
+    </section>
+      <!-- albums! -->
+      <div id='bands'>
+
+        <!-- handlebars template -->
+        <script id="band" type="text/x-handlebars-template">
+
+          <!-- one album -->
+          <div class="row album" data-album-id={{album._id}}>
+
+            <div class="col-md-10 col-md-offset-1">
+              <div class="panel panel-default">
+                <div class="panel-body">
+
+
+                <!-- begin album internal row -->
+                  <div class='row band-row'>
+                    <div class="col-xs-12">
+                      <h3 class='band-name'>{{band.name}}</h3>
+                    </div>
+                    <div class="col-md-3 col-xs-12 thumbnail album-art">
+                      <span class='band-image'><img class="img-responsive band-image" src="/images/String-cheese.jpg"/></span>
+                    </div>
+
+                    <div class="col-md-9 col-xs-12">
+                      <ul class="list-group" id="add-songs">
+                        <li class="list-group-item">
+                          <h4 class='inline-header'>Formation Date:</h4>
+                          <span class='artist-name'>{{band.formationDate}}</span>
+                        </li>
+                        <li class="list-group-item">
+                          <h4 class='inline-header'>Record Label:</h4>
+                          <span class='album-releaseDate'>{{band.recordLabel}}</span>
+                        </li>
+                        <li class="list-group-item">
+                          <h4 class='inline-header'>Description:</h4>
+                          <span class='album-releaseDate'>{{band.description}}</span>
+                        </li>
+                        <li class="list-group-item">
+                          <h4 class='inline-header'>Genres:</h4>
+                          <span class='album-releaseDate'>{{band.genres}}</span>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <!-- end of album internal row -->
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </script>
+      </div>
+
+      <!-- end one album -->
+    </section>
+
+    <section class="container">
+
+      <section class="container">
+        <div class="row">
+          <div class="col-md-10 col-md-offset-1">
+
+            <form id='band-form' class="form-horizontal">
+              <fieldset>
+
+              <!-- Form Name -->
+              <legend>Add New Band</legend>
+
+              <!-- Text input-->
+              <div class="form-group">
+                <label class="col-md-4 control-label" for="name">Band Name</label>
+                <div class="col-md-4">
+                <input id="band-name" name="name" type="text" placeholder="" class="form-control input-md" required="">
+
+                </div>
+              </div>
+
+              <!-- Text input-->
+              <div class="form-group">
+                <label class="col-md-4 control-label" for="artistName">Formation Date</label>
+                <div class="col-md-4">
+                <input id="band-formationDate" name="formationDate" type="text" placeholder="" class="form-control input-md">
+
+                </div>
+              </div>
+
+              <!-- Text input-->
+              <div class="form-group">
+                <label class="col-md-4 control-label" for="releaseDate">Record Label</label>
+                <div class="col-md-4">
+                <input id="band-recordLabel" name="recordLabel" type="text" placeholder="Enter Record Label here" class="form-control input-md">
+
+                </div>
+              </div>
+
+              <!-- Textarea-->
+              <div class="form-group">
+                <label class="col-md-4 control-label" for="releaseDate">Description</label>
+                <div class="col-md-4">
+                <textarea id="band-description" name="description" type="text" placeholder="Enter Description here" class="form-control input-md"></textarea>
+
+                </div>
+              </div>
+
+              <!-- Textarea -->
+              <div class="form-group">
+                <label class="col-md-4 control-label" for="genres">Genres (separated by commas)</label>
+                <div class="col-md-4">
+                  <textarea class="form-control input-md" id="band-genres" name="genres">rock, pop</textarea>
+                </div>
+              </div>
+
+              <!-- Button -->
+              <div class="form-group">
+                <div class="col-md-4">
+                  <button id="singlebutton" name="submit" class="btn btn-primary">Submit</button>
+                </div>
+              </div>
+
+            </fieldset>
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <div class='panel-footer'>
+      <button class='btn btn-success btn-group-lg add-band' data-toggle="modal" data-target="#myModal" data-id="myModal">Add Band</button>
+    </div>
 
   </body>
 </html>
