--- a/views/concerts.html
+++ b/views/concerts.html
@@ -10,7 +10,7 @@
     <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
     <!-- custom styles -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 
     <!-- jquery -->
     <!-- Note: using subresource integrity; see: https://en.wikipedia.org/wiki/Subresource_Integrity -->
@@ -19,11 +19,8 @@
     <!-- handlebars -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
 
-    <!-- custom script -->
-    <script type="text/javascript" src="js/app.js"></script>
-
     <!-- APPLICATION SCRIPTS -->
-    <script src="scripts/concerts.js"></script>
+    <script type="text/javascript" src="scripts/concerts.js"></script>
   </head>
 
   <body>
