--- a/views/bands.html
+++ b/views/bands.html
@@ -66,28 +66,29 @@
     <h1 id="bands-header">Bands</h1>
 
     </section>
-      <!-- albums! -->
-      <div id='bands'>
+      <!-- bands! -->
+      <div id='bands' data-band-id={{band._id}}>
 
         <!-- handlebars template -->
-        <script id="band" type="text/x-handlebars-template">
+        <script id="band-template" type="text/x-handlebars-template">
 
-          <!-- one album -->
-          <div class="row album" data-album-id={{album._id}}>
+          <!-- one band -->
+          <div class="row band">
 
             <div class="col-md-10 col-md-offset-1">
               <div class="panel panel-default">
                 <div class="panel-body">
 
 
-                <!-- begin album internal row -->
+                <!-- begin band internal row -->
                   <div class='row band-row'>
                     <div class="col-xs-12">
                       <h3 class='band-name'>{{band.name}}</h3>
                     </div>
-                    <div class="col-md-3 col-xs-12 thumbnail album-art">
-                      <img class="img-responsive band-image" src="{{band.image_url}}" alt="band image"/>
+                    <div class="col-md-3 col-xs-12 thumbnail band-art">
+                      <span class='band-image'><img class="img-responsive band-image" src="{{band.image_url}}"/></span>
                     </div>
+
                     <div class="col-md-9 col-xs-12">
                       <ul class="list-group" id="add-songs">
                         <li class="list-group-item">
@@ -96,23 +97,25 @@
                         </li>
                         <li class="list-group-item">
                           <h4 class='inline-header'>Record Label:</h4>
-                          <span class='album-releaseDate'>{{band.recordLabel}}</span>
+                          <span class='band-releaseDate'>{{band.recordLabel}}</span>
                         </li>
                         <li class="list-group-item">
                           <h4 class='inline-header'>Description:</h4>
-                          <span class='album-releaseDate'>{{band.description}}</span>
+                          <span class='band-releaseDate'>{{band.description}}</span>
                         </li>
                         <li class="list-group-item">
                           <h4 class='inline-header'>Genres:</h4>
-                          <span class='album-releaseDate'>{{band.genres}}</span>
+                          <span class='band-releaseDate'>{{band.genres}}</span>
+                        </li>
+                        <li class="list-group-item">
+                          <h4 class='inline-header'>ID:</h4>
+                          <span class='band-id'>{{band._id}}</span>
                         </li>
                       </ul>
                     </div>
-                    <div class="col-xs-12">
-                      <button class='btn btn-danger delete-band pull-right' data-id={{_id}}>Delete Band</button>
-                    </div>
                   </div>
-                  <!-- end of album internal row -->
+                  <button type="button" name="delete-band-button" class="delete-band-button btn btn-danger pull-right" data-band-id={{band._id}}>Delete</button>
+                  <!-- end of band internal row -->
 
                 </div>
               </div>
@@ -121,14 +124,14 @@
         </script>
       </div>
 
-      <!-- end one album -->
+      <!-- end one band -->
     </section>
 
     <section class="container">
 
       <section class="container">
         <div class="row">
-          <div class="col-md-10 col-offset-1">
+          <div class="col-md-10 col-md-offset-1">
 
             <form id='band-form' class="form-horizontal">
               <fieldset>
@@ -139,15 +142,16 @@
               <!-- Text input-->
               <div class="form-group">
                 <label class="col-md-4 control-label" for="name">Band Name</label>
-                <div class="col-md-8">
+                <div class="col-md-4">
                 <input id="band-name" name="name" type="text" placeholder="" class="form-control input-md" required="">
+
                 </div>
               </div>
 
               <!-- Text input-->
               <div class="form-group">
-                <label class="col-md-4 control-label" for="formationDate">Formation Date</label>
-                <div class="col-md-8">
+                <label class="col-md-4 control-label" for="artistName">Formation Date</label>
+                <div class="col-md-4">
                 <input id="band-formationDate" name="formationDate" type="text" placeholder="" class="form-control input-md">
 
                 </div>
@@ -155,34 +159,33 @@
 
               <!-- Text input-->
               <div class="form-group">
-                <label class="col-md-4 control-label" for="recordLabel">Record Label</label>
-                <div class="col-md-8">
+                <label class="col-md-4 control-label" for="recordLabal">Record Label</label>
+                <div class="col-md-4">
                 <input id="band-recordLabel" name="recordLabel" type="text" placeholder="Enter Record Label here" class="form-control input-md">
-
                 </div>
               </div>
 
               <!-- Text input-->
               <div class="form-group">
                 <label class="col-md-4 control-label" for="image_url">Image URL</label>
-                <div class="col-md-8">
-                <input id="band-image-url" name="image_url" type="text" placeholder="Upload an Image" class="form-control input-md">
+                <div class="col-md-4">
+                <input id="band-image" name="image_url" type="text" placeholder="Enter Image URL here" class="form-control input-md">
                 </div>
               </div>
 
               <!-- Textarea-->
               <div class="form-group">
                 <label class="col-md-4 control-label" for="releaseDate">Description</label>
-                <div class="col-md-8">
-                  <textarea class="form-control input-md" id="band-description" name="description" type="text" placeholder="Enter Description here" class="form-control input-md"></textarea>
+                <div class="col-md-4">
+                <textarea id="band-description" name="description" type="text" placeholder="Enter Description here" class="form-control input-md"></textarea>
                 </div>
               </div>
 
               <!-- Textarea -->
               <div class="form-group">
                 <label class="col-md-4 control-label" for="genres">Genres</label>
-                <div class="col-md-8">
-                  <textarea class="form-control input-md" id="band-genres" name="genres" type="text" placeholder="Enter Genres here. Separate with commas."></textarea>
+                <div class="col-md-4">
+                  <textarea class="form-control input-md" id="band-genres" name="genres" placeholder="Enter Genres (separated by commas)"></textarea>
                 </div>
               </div>
 
@@ -200,7 +203,7 @@
     </section>
 
     <div class='panel-footer'>
-      <button class='btn btn-group-lg btn-success add-band' data-toggle="modal" data-target="#myModal" data-id="myModal">Add Band</button>
+      <button class='btn btn-success btn-group-lg add-band' data-toggle="modal" data-target="#myModal" data-id="myModal">Add Band</button>
     </div>
 
   </body>
