--- a/views/concerts.html
+++ b/views/concerts.html
@@ -41,7 +41,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="/bands">Bands</a></li>
+            <li><a href="/concerts">Bands</a></li>
             <li class="active"><a href="/concerts">Concerts<span class="sr-only">(current)</span></a></li>
             <li><a href="/members">Members</a></li>
           </ul>
@@ -63,6 +63,165 @@
     </nav>
 
     <h1>Concerts Index</h1>
+
+    <section>
+      <!-- concerts! -->
+      <div id='concerts' data-concert-id="{{concert._id}}">
+
+        <!-- handlebars template -->
+        <script id="concert-template" type="text/x-handlebars-template">
+
+          <!-- one concert -->
+          <div class="row concert">
+
+            <div class="col-md-10 col-md-offset-1">
+              <div class="panel panel-default">
+                <div class="panel-body">
+
+
+                <!-- begin concert internal row -->
+                  <div class='row concert-row'>
+                    <div class="col-xs-12">
+                      <h3 class='concert-name'>{{concert.eventName}}</h3>
+                    </div>
+                    <div class="col-md-3 col-xs-12 thumbnail concert-art">
+                      <span class='concert-image'><img class="img-responsive concert-image" src="{{concert.image_url}}"/></span>
+                    </div>
+
+                    <div class="col-md-9 col-xs-12">
+                      <ul class="list-group" id="add-concerts">
+                        <li class="list-group-item">
+                          <h4 class='inline-header'>Band</h4>
+                          <span class='concert-formationDate'>{{concert.eventName}}</span>
+                        </li>
+                        <li class="list-group-item">
+                          <h4 class='inline-header'>Date</h4>
+                          <span class='concert-formationDate'>{{concert.date}}</span>
+                        </li>
+                        <li class="list-group-item">
+                          <h4 class='inline-header'>Location:</h4>
+                          <span class='concert-releaseDate'>{{concert.location}}</span>
+                        </li>
+                        <li class="list-group-item">
+                          <h4 class='inline-header'>Time:</h4>
+                          <span class='concert-releaseDate'>{{concert.time}}</span>
+                        </li>
+                        <li class="list-group-item">
+                          <h4 class='inline-header'>Description:</h4>
+                          <span class='concert-releaseDate'>{{concert.description}}</span>
+                        </li>
+                        <li class="list-group-item">
+                          <h4 class='inline-header'>Event Link:</h4>
+                          <span class='concert-Id'>{{concert.event_url}}</span>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <button type="button" class="delete-concert-button btn btn-md btn-danger pull-right" data-concert-id="{{concert._id}}">Delete</button>
+                  <!-- end of concert internal row -->
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </script>
+      </div>
+
+      <!-- end one concert -->
+    </section>
+
+    <section class="container">
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+
+          <form id='concert-form' class="form-horizontal">
+            <fieldset>
+
+            <!-- Form Name -->
+            <legend>Add New Concert</legend>
+
+            <!-- Text input-->
+            <div class="form-group">
+              <label class="col-md-2 col-md-offset-1 control-label" for="eventName">Event Name</label>
+              <div class="col-md-8">
+              <input id="concert-eventName" name="eventName" type="text" placeholder="" class="form-control input-md" required="">
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label class="col-md-2 col-md-offset-1 control-label" for="band">Band</label>
+              <div class="col-md-8">
+
+                <select id="concert-band" name="band" class="form-control input-md" required="">
+                    <option value="" disabled="disabled" selected="selected">Please select a name</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                </select>
+
+              </div>
+            </div>
+
+            <!-- Text input-->
+            <div class="form-group">
+              <label class="col-md-2 col-md-offset-1 control-label" for="location">Location</label>
+              <div class="col-md-8">
+              <input id="concert-location" name="location" type="text" placeholder="" class="form-control input-md">
+              </div>
+            </div>
+
+            <!-- Text input-->
+            <div class="form-group">
+              <label class="col-md-2 col-md-offset-1 control-label" for="date">Date</label>
+              <div class="col-md-8">
+              <input id="concert-date" name="concertDate" type="date" placeholder="" class="form-control input-md">
+
+              </div>
+            </div>
+
+            <!-- Text input-->
+            <div class="form-group">
+              <label class="col-md-2 col-md-offset-1 control-label" for="time">Time</label>
+              <div class="col-md-8">
+              <input id="concert-time" name="time" type="text" placeholder="Enter Start Time here" class="form-control input-md">
+              </div>
+            </div>
+
+            <!-- Text input-->
+            <div class="form-group">
+              <label class="col-md-2 col-md-offset-1 control-label" for="event_url">Event URL</label>
+              <div class="col-md-8">
+              <input id="concert-event-url" name="event_url" type="text" placeholder="Enter Event URL here" class="form-control input-md">
+              </div>
+            </div>
+
+            <!-- Text input-->
+            <div class="form-group">
+              <label class="col-md-2 col-md-offset-1 control-label" for="image_url">Image URL</label>
+              <div class="col-md-8">
+              <input id="concert-image-url" name="image_url" type="text" placeholder="Enter Image URL here" class="form-control input-md">
+              </div>
+            </div>
+
+            <!-- Textarea-->
+            <div class="form-group">
+              <label class="col-md-2 col-md-offset-1 control-label" for="description">Description</label>
+              <div class="col-md-8">
+              <textarea id="concert-description" name="description" type="text" placeholder="Enter Description here" class="form-control input-md"></textarea>
+              </div>
+            </div>
+
+            <!-- Button -->
+            <div class="form-group">
+              <div class="col-md-4">
+                <button id="singlebutton" name="submit" class="btn btn-lg btn-primary add-concert-submit">Submit</button>
+              </div>
+            </div>
+            </fieldset>
+          </form>
+        </div>
+      </div>
+    </section>
 
   </body>
 </html>
