Saving before major input change

--- a/views/concerts.html
+++ b/views/concerts.html
@@ -96,7 +96,7 @@
                         </li>
                         <li class="list-group-item">
                           <h4 class='inline-header'>Date</h4>
-                          <span class='concertDate'></span>
+                          <span class='concertDate'>{{concert.date}}</span>
                         </li>
                         <li class="list-group-item">
                           <h4 class='inline-header'>Location:</h4>
@@ -166,16 +166,7 @@
             <div class="form-group">
               <label class="col-md-2 col-md-offset-1 control-label" for="date">Date</label>
               <div class="col-md-8">
-              <input id="concert-date" name="concertDate" type="date" placeholder="" class="form-control input-md">
-
-              </div>
-            </div>
-
-            <!-- Text input-->
-            <div class="form-group">
-              <label class="col-md-2 col-md-offset-1 control-label" for="time">Time</label>
-              <div class="col-md-8">
-              <input id="concert-time" name="time" type="text" placeholder="Enter Start Time here" class="form-control input-md">
+                <input id="concert-date" name="concertDate" type="date" placeholder="" class="form-control input-md">
               </div>
             </div>
 
