--- a/views/bands.html
+++ b/views/bands.html
@@ -102,19 +102,19 @@
                           </li>
                           <li class="list-group-item">
                             <h4 class='inline-header'>Record Label:</h4>
-                            <span class='band-releaseDate'>{{recordLabel}}</span>
+                            <span class='band-recordLabel'>{{recordLabel}}</span>
                           </li>
                           <li class="list-group-item">
                             <h4 class='inline-header'>Description:</h4>
-                            <span class='band-releaseDate'>{{description}}</span>
+                            <span class='band-description'>{{description}}</span>
                           </li>
                           <li class="list-group-item">
                             <h4 class='inline-header'>Genres:</h4>
-                            <span class='band-releaseDate'>{{genres}}</span>
+                            <span class='band-genres'>{{genres}}</span>
                           </li>
-                          <li class="list-group-item">
-                            <h4 class='inline-header'>ID:</h4>
-                            <span class='band-Id'>{{_id}}</span>
+                          <li class="list-group-item edit-band-image hidden">
+                            <h4 class='inline-header'>Image URL</h4>
+                            <span class='band-image-url'>{{image_url}}</span>
                           </li>
                           <!-- <li class="list-group-item">
                             <h4 class='inline-header'>Concerts:</h4>
@@ -148,11 +148,11 @@
             <fieldset>
 
             <!-- Form Name -->
-            <legend>Add New Band</legend>
+            <legend>Add New Artist</legend>
 
             <!-- Text input-->
             <div class="form-group">
-              <label class="col-md-2 col-md-offset-1 control-label" for="name">Band Name</label>
+              <label class="col-md-2 col-md-offset-1 control-label" for="name">Artist Name</label>
               <div class="col-md-8">
                 <input id="band-name" name="name" type="text" placeholder="" class="form-control input-md" required="">
               </div>
